force-app/main/default/objects/Account/fields/CloseHoursFriday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursFriday__c</fullName>
    <label>CloseHoursFriday</label>
    <type>Time</type>
</CustomField>