force-app/main/default/objects/Account/fields/CloseHoursMonday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursMonday__c</fullName>
    <label>CloseHoursMonday</label>
    <type>Time</type>
</CustomField>