force-app/main/default/objects/Account/fields/CloseHoursSaturday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursSaturday__c</fullName>
    <label>CloseHoursSaturday</label>
    <type>Time</type>
</CustomField>