force-app/main/default/objects/Account/fields/CloseHoursSunday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursSunday__c</fullName>
    <label>CloseHoursSunday</label>
    <type>Time</type>
</CustomField>