force-app/main/default/objects/Account/fields/CloseHoursThursday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursThursday__c</fullName>
    <label>CloseHoursThursday</label>
    <type>Time</type>
</CustomField>