force-app/main/default/objects/Account/fields/CloseHoursTuesday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursTuesday__c</fullName>
    <label>CloseHoursTuesday</label>
    <type>Time</type>
</CustomField>