force-app/main/default/objects/Account/fields/CloseHoursWednesday__c.field-meta.xml
<CustomField>
    <fullName>CloseHoursWednesday__c</fullName>
    <label>CloseHoursWednesday</label>
    <type>Time</type>
</CustomField>