force-app/main/default/objects/Account/fields/NumberOfAnimals__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAnimals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NumberOfAnimals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>