force-app/main/default/objects/Account/fields/numberOfUnadapted__c.field-meta.xml
<CustomField>
    <fullName>numberOfUnadapted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>numberOfUnadapted</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>