force-app/main/default/objects/Account/fields/OpenHours__c.field-meta.xml
<CustomField>
    <fullName>OpenHours__c</fullName>
    <label>OpenHours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>