force-app/main/default/objects/Account/fields/OpenHoursFriday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursFriday__c</fullName>
    <label>OpenHoursFriday</label>
    <type>Time</type>
</CustomField>