force-app/main/default/objects/Account/fields/OpenHoursMonday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursMonday__c</fullName>
    <label>OpenHoursMonday</label>
    <type>Time</type>
</CustomField>