force-app/main/default/objects/Account/fields/OpenHoursSaturday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursSaturday__c</fullName>
    <label>OpenHoursSaturday</label>
    <type>Time</type>
</CustomField>