force-app/main/default/objects/Account/fields/OpenHoursSunday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursSunday__c</fullName>
    <label>OpenHoursSunday</label>
    <type>Time</type>
</CustomField>