force-app/main/default/objects/Account/fields/OpenHoursThursday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursThursday__c</fullName>
    <label>OpenHoursThursday</label>
    <type>Time</type>
</CustomField>