force-app/main/default/objects/Account/fields/OpenHoursTuesday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursTuesday__c</fullName>
    <label>OpenHoursTuesday</label>
    <type>Time</type>
</CustomField>