force-app/main/default/objects/Account/fields/OpenHoursWednesday__c.field-meta.xml
<CustomField>
    <fullName>OpenHoursWednesday__c</fullName>
    <label>OpenHoursWednesday</label>
    <type>Time</type>
</CustomField>