force-app/main/default/objects/Account/fields/SumOfAdoptions__c.field-meta.xml
<CustomField>
    <fullName>SumOfAdoptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumOfAdoptions</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>