force-app/main/default/objects/Account/validationRules/SumOfAdoptionsIsGreaterThan0.validationRule-meta.xml
<ValidationRule>
    <fullName>SumOfAdoptionsIsGreaterThan0</fullName>
    <active>true</active>
    <errorConditionFormula>SumOfAdoptions__c &lt; 0</errorConditionFormula>
    <errorMessage>Sum of Adoptions have to be greater or equal 0!</errorMessage>
</ValidationRule>